added profanity filter to review add/edit

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "bad-words": "^3.0.4",
+    "profanity-filter": "^0.2.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.2.0",
