--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,10 @@ target 'coffida' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'coffidaTests' do
     inherit! :complete
     # Pods for testing
