--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.63.4",
     "react-native-camera": "^3.43.0",
     "react-native-elements": "^3.2.0",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
